Kinetic Request CE Submission DB Insert V1 (2017-04-12)
 * Initial version.  See README for details.

Kinetic Request CE Submission DB Insert V1.1 (2018-06-05)
* API Server Info Value changed to allow ${space} in the url for subdomain support
(ie. https://${space}.localhost:8080/kinetic)