@@ -4,3 +4,7 @@ Kinetic Request CE Submission DB Insert V1 (2017-04-12)
 Kinetic Request CE Submission DB Insert V1.1 (2018-06-05)
 * API Server Info Value changed to allow ${space} in the url for subdomain support
 (ie. https://${space}.localhost:8080/kinetic)
+
+Kinetic Request CE Submission DB Insert V1.2 (2020-10-29)
+* Fixed bug for datastore submission deletions not working.
+* Added info value for providing custom JDBC connection options
